--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,7 @@
 /*====================================================================RESETAR CONFIGURAÇÕES DE PAGINA PREÉSTABELECIDAS==============================================================================================*/
 html, body{
-    height:100%
+    height:100%;
+    width: 100%;
 }
 html {
   line-height: 1.15; 
@@ -20,33 +21,36 @@ nav img{
     width: 3.5rem;
     height: 3.5rem;
 }
+#cmenu{
+    margin-left:18%;
+    margin-right:18%;
+}
 .menu{
-    font-family: 'Fjalla One', sans-serif;
-    font-size: 30px;
-    padding-left:2rem;
     background-color: #F7F8FF;
+    display: flex;
     justify-content: space-between;
     list-style: none;
     position: fixed;
     width: 100%;
-    height:12%;
+    height:8%;
     text-align: center;
-    top:-25px;
     z-index: 1;
 }
 .menu li{
-    position: relative;
     font-family: 'Fjalla One', sans-serif;
-    font-size:25px;
-    padding: 0;
-    margin-right:15px;
+    font-size:20px;
     display: inline-block;
+    margin-left:5%;
+    margin-right:5%;
+}
+.menu ul{
+    display: flex;
+    width:125%;
+    text-align: center;
 }
 .menu a{
     position: relative;
-    padding-left: 43px;
-    padding-right: 43px;
-    display: inline-block;
+    display: block;
     background-color: #F7F8FF;
     color: black;
     text-decoration: none;
@@ -58,19 +62,20 @@ nav img{
     border-bottom: 3px solid #639CFF;
     border-radius: 20px;
 }
-
+.homepage{
+    margin-top:-50%;
+}
 
 /*===============================================================================BLOCO PRINCIPAL=====================================================================================================================*/
 .container{
     background-color:white;
-    width: 90%;
     border-radius: 20px;
     position:relative;
-    left:50px;
-    right:50px;
-    top:100px;
+    top:15%;
     opacity: 0.95;
     z-index: 0;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 h1{
     font-family: 'Quicksand', sans-serif;
@@ -96,16 +101,8 @@ p, dd, td{
 }
 /*=====================================================================================INDEX=====================================================================================================================*/
 .container#index{
-    background-color:white;
-    width: 90%;
-    border-radius: 20px;
-    position:relative;
-    left:50px;
-    top:100px;
-    opacity: 0.9;
-    z-index: 0;
-    display:block;
-    margin-right:0;
+    margin-left: 5%;
+    margin-right:5%;
 }
 /*============================================PERFIL======================================================*/
 #perfil{
@@ -369,8 +366,11 @@ fieldset{
 }
 /*=================================================================================================FOOTER=========================================================================================================*/
 footer{
-    margin-top:120px;
+    margin-top:10%;
     width:100%;
+    left:0;
+    right:0;
+    bottom:0;
 }
 #copyright{
     background-color: #1B1A52;
@@ -444,7 +444,6 @@ footer{
     margin-bottom: 10px;
     position: relative;
     padding-left: 0;
-    left: 10px;
     margin-top:-5px;
     padding-top:10px;
 }
